# AnythingLLM_File-Manager

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  _db.sqlite3  db.sqlite3  devity.config  docker-compose.yml  entrypoint.sh  example.env  pyproject.toml  start.sh
check_for_files/: admin.py  apps.py  describe_images.py  models.py  scheduler.py  sort_files.py  tasks class.py  tasks.py  urls.py  views.py
check_for_files/management/commands/: check_servers.py
check_for_files/migrations/: 0001_initial.py  0002_fileinfo.py  0003_created_workspaces.py
main/: settings.py  urls.py
main/templates/: home.html
